--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.1.15",
     "lucide-react": "^0.438.0",
-    "next": "^15.0.2",
+    "next": "14.2.7",
     "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18",
+    "react-dom": "^18",
     "react-top-loading-bar": "^2.3.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-document": "^7.0.3",
@@ -44,7 +44,7 @@
     "@types/node": "22.5.2",
     "@types/react": "18.3.5",
     "eslint": "^8",
-    "eslint-config-next": "^15.0.2",
+    "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
