--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ai-assisted-blog",
-  "version": "0.1.0",
+  "name": "matter",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
