--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@rehype-pretty/transformers": "^0.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,10 +25,13 @@
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.1.15",
     "lucide-react": "^0.438.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.1",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-top-loading-bar": "^2.3.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-document": "^7.0.3",
